# py_training

./: .gitignore
250801_2nd/: main.py
250808_3rd/: pyproject.toml
250808_3rd/admin/: settings.py  urls.py
250808_3rd/app/: urls.py  views.py
250808_3rd/app/resources/: mn.csv
250808_3rd/app/templates/app/: show_csv.html
250829_4th/: gcv_warranty_wage.py
